--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "framer-motion": "^12.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
